added answered functionality

--- a/index.html
+++ b/index.html
@@ -47,6 +47,18 @@
 			<dt>Asker</dt>
 				<dd class="asker"></dd>
 		</dl>
+
+		<div class="error">
+			<p>Uh-oh! Something went wrong with your request. Here's what we know:</p>
+		</div>
+	</div>
+	<div class="atemplates hidden">
+		<dl class="result answer">
+			
+			<dt>Answer</dt>
+				<dd class="answerer"></dd>
+		</dl>
+		
 		<div class="error">
 			<p>Uh-oh! Something went wrong with your request. Here's what we know:</p>
 		</div>
